# awui

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac
data/: awui-hildon.desktop.in
data/misc/: formulas.py
libawui/: hildon.h.in  model.h.in  web.h.in
libawui/hildon/: captcha-dialog.c  captcha-dialog.h  enums.h.in  fleet-view.c  fleet-view.h  login-dialog.c  login-dialog.h  main-view.c  main-view.h  map-view.c  map-view.h  news-view.c  news-view.h  planet-detail-view.c  planet-detail-view.h  planet-view.c  planet-view.h  popup-dialog.c  popup-dialog.h  science-view.c  science-view.h  spend-all-dialog.c  spend-all-dialog.h  system-view.c  system-view.h  tree-view.c  tree-view.h  window.c  window.h
libawui/model/: bonus.c  bonus.h  building.c  building.h  enums.c.in  enums.h.in  fleet.c  fleet.h  item.c  item.h  news.c  news.h  planet.c  planet.h  point.c  point.h  profile.c  profile.h  science.c  science.h  settings.c  settings.h  star.c  star.h  vessel.c  vessel.h
libawui/web/: captcha.c  captcha.h  parser.c  parser.h  session.c  session.h
src/: captcha-decode.c  captcha-font.c  captcha.c  login.c  main.c  main.h  showcase.c
tests/: test-archive.c  test-parser.c
tests/data/: buildings.html  buy.html  export-all.tar.bz2  fleet.html  fleet2.html  fleet3.html  launch.html  map.html  news-collection.html  news.html  planet-details.html  planet-spend-points.html  planets.html  profile.html  profile2.html  profile3.html  science-change.html  science.html  science2.html  sell.html  spend-all-html.html  system.html  trade-agreement.html  trade-buy.html  trade.html
